--- a/tools/Template.tex
+++ b/tools/Template.tex
@@ -17,6 +17,7 @@
 \usepackage{titlesec}
 \usepackage[colorlinks, urlcolor=blue]{hyperref}
 \usepackage{diagbox}
+\usepackage{ulem}
 %-------------------------------%
 %          Page Style           %
 %-------------------------------%
