--- a/571/L4/L4.tex
+++ b/571/L4/L4.tex
@@ -4,6 +4,8 @@
 \begin{document}
 \maketitle
 
+\href{https://github.com/Luna1996/WUSTL/blob/master/571/L4/L4.pdf}{Full PDF}
+
 \section{Becoming a Certificate Authority}
 Generating.
 \begin{figure}[H]\centering\includegraphics[width=\textwidth]{1-1.png}\end{figure}
